03. tcpserver.c: allow both user and uid to be passed to -u option. 
    passing user enables setting of supplementary groups
- 20/02/2023
04. tcpserver.c: add additional groups as a comma separated
    groups to -g
- 08/03/2023
05. tcpclient.c: refactored wait handling
- 01/04/2023
06. load_mysql.c: refactored getlibObject() function

* Mon Jan 30 2023 13:14:56 +0000 Manvendra Bhangui <ucspi-tcp@indimail.org> 1.1.1-1.1%{?dist}
Release 1.1.1 Start 18/09/2022 End 30/01/2023
======= Release Highlights ================================================
o tcpserver, tcpclient, dotls: option to load ciphers from file
o tcpclient, tcpserver, dotls: set TLS_PROVIDER env variable for qmail-smtpd
  to insert into received header
o use tls functions from libqmail
===========================================================================
- 18/09/2022
01.  instcheck.in: use uininstaller only for ucspi-tcp
- 23/11/2022
02.  load_mysql.c: renamed mysql_lib to libmysql
- 13/12/2022
03.  tcpserver.c, tcpclient.c: display diagnostic on exit status
- 21/12/2022
04.  tcpserver.c, dotls.c: added -f option to load ciphers from a file.
- 22/12/2022
05.  tls.c: log ssl error on SSL_accept() failure
06.  dotls.c: fixed missing carriage return in EHLO output
07.  dotls.c: log client, server ssl versions on connnect
08.  dotls.c: bypass SSL/TLS if NOTLS is set
- 23/12/2022
09.  tcpserver.c, tcpclient.c, dotls.c: added -M option to set TLS / SSL
     client/server method
10.  tcpclient.c: added -f option to load ciphers from a file
11.  tls.c: added set_tls_method to set TLS / SSL client/server method
12.  tcpserver.c, dotls.c: use ssl_free() to shutdown ssl
13.  dotls.c: fixed non-tls incorrect linemode setting
- 24/12/2022
14.  tls.c: decode TLS/SSL SSL_connect, SSL_accept
15.  tls.c: added functions to set RSA/DH parameters
16.  tcpserver.c, dotls.c: set RSA/DH parameters
17.  tcpserver.c: added -i option to specify certdir
18.  dotls.c: added -d option to specify certdir
- 25/12/2022